--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,11 @@
 .App {
-  text-align: center;
+  max-width:800px;
+  width:100%;
+  margin:30px auto;
+  border:5px solid rgb(74, 97, 74);
+  background-color: rgba(190, 211, 190, 0.322);
+  border-radius:5px;
+  font-family: 'Rubik', sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
